[metadata]
name = digital
summary = Digital thread and digital twin for Industry-4.0
description-file =
    README.rst
author = KnowX
author-email = know_x@outlook.com
home-page = http://www.knowx.top
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/digital =
        etc/digital/api-paste.ini
packages =
    digital
extra_files =
    requirements.txt

[compile_catalog]
directory = digital/locale
domain = digital

[update_catalog]
domain = digital
output_dir = digital/locale
input_file = digital/locale/digital.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = digital/locale/digital.pot

[entry_points]
console_scripts =
    digital-api = digital.cmd.api:main
    digital-db-manage = digital.cmd.db_manage:main

oslo.config.opts =
    digital = digital.opts:list_opts
    digital.conf = digital.conf.opts:list_opts

oslo.config.opts.defaults =
    digital = digital.common.config:set_cors_middleware_defaults

oslo.policy.policies =
    digital = digital.common.policies:list_rules
    
digital.database.migration_backend =
    sqlalchemy = digital.db.sqlalchemy.migration

digital.cert_manager.backend =
    barbican = digital.common.cert_manager.barbican_cert_manager
    local = digital.common.cert_manager.local_cert_manager
    x509keypair = digital.common.cert_manager.x509keypair_cert_manager

[bdist_rpm]
post_install = scripts/post_install.sh
post_uninstall = scripts/post_uninstall.sh

[wheel]
universal = 1

[extras]
osprofiler =
  osprofiler>=1.4.0 # Apache-2.0